@@ -27,10 +27,12 @@ package io.github.mzmine.parameters.parametertypes.elements;
 
 import io.github.mzmine.parameters.Parameter;
 import io.github.mzmine.parameters.UserParameter;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.jetbrains.annotations.Nullable;
 import org.openscience.cdk.Element;
 
 public class ElementsParameter implements UserParameter<List<Element>, ElementsComponent> {
@@ -50,9 +52,9 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
 
   public ElementsParameter(String name, String description) {
     // Most abundance elements in biomolecules as a default value for elements
-    this(name, description, true, Arrays.asList(new Element("H"),
-        new Element("C"), new Element("N"), new Element("O"),
-        new Element("S")));
+    this(name, description, true,
+        Arrays.asList(new Element("H"), new Element("C"), new Element("N"), new Element("O"),
+            new Element("S")));
   }
 
   @Override
@@ -71,7 +73,8 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
   }
 
   @Override
-  public void setValueToComponent(ElementsComponent elementsComponent, List<Element> newValue) {
+  public void setValueToComponent(ElementsComponent elementsComponent,
+      @Nullable List<Element> newValue) {
     elementsComponent.setValue(newValue);
   }
 
@@ -107,9 +110,8 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
     }
 
     String values = xmlElement.getTextContent().replaceAll("\\s", "");
-    value = Arrays.stream(values.split(","))
-        .map(Element::new)
-        .collect(Collectors.toList());
+    value = Arrays.stream(values.split(",")).distinct().map(Element::new)
+        .toList();
   }
 
   @Override
@@ -122,9 +124,7 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
       throw new NullPointerException("Value is null.");
     }
 
-    String text = value.stream()
-        .map(Element::getSymbol)
-        .map(Object::toString)
+    String text = value.stream().map(Element::getSymbol).map(Object::toString)
         .collect(Collectors.joining(","));
 
     xmlElement.setTextContent(text);
@@ -137,25 +137,26 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
 
   @Override
   public UserParameter<List<Element>, ElementsComponent> cloneParameter() {
-    ElementsParameter copy = new ElementsParameter(name, description, valueRequired, value);
-    copy.setValue(this.getValue());
+    var valueCopy = new ArrayList<>(value);
+    ElementsParameter copy = new ElementsParameter(name, description, valueRequired, valueCopy);
+    copy.setValue(valueCopy);
     return copy;
   }
 
   @Override
   public boolean valueEquals(Parameter<?> that) {
-    if(!(that instanceof ElementsParameter elementsParameter)) {
+    if (!(that instanceof ElementsParameter elementsParameter)) {
       return false;
     }
 
     final List<Element> thatElements = elementsParameter.getValue();
-    if(thatElements.size() != value.size()) {
+    if (thatElements.size() != value.size()) {
       return false;
     }
 
     for (int i = 0; i < value.size(); i++) {
       var element = value.get(i);
-      if(!element.compare(thatElements.get(i))) {
+      if (!element.compare(thatElements.get(i))) {
         return false;
       }
     }
